<resources>
    <string name="app_name">Printechs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_receipt1">Receipt1Activity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="no_data">No Data</string>
    <string name="barcode">Barcode</string>
    <string name="brand">Brand</string>
    <string name="QTY">Qty</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="total_qty">Total Qty</string>
    <string name="remove">Remove</string>
    <string name="remove_item_msg">Are you sure you want to remove this item?</string>
    <string name="ok">Ok</string>
    <string name="item_deleted_successfully">Item deleted Successfully</string>
    <string name="cancel">Cancel</string>
    <string name="not_found">Not Found!</string>
    <string name="barcode_not_exists">Barcode not exists!</string>
    <string name="select_an_option">Select An Option</string>
    <string name="stock_take">Stock Take</string>
    <string name="auto">Auto</string>
    <string name="loc">Loc</string>
    <string name="rn">Rn.</string>
    <string name="bin">Bin#</string>
    <string name="bat">Bat#</string>
    <string name="desc1">Desc1</string>
    <string name="desc2">Desc2</string>
    <string name="cost">Cost</string>
    <string name="uom">UOM</string>
    <string name="unit">Unit</string>
    <string name="info_summary">Info: Summary</string>
    <string name="total_scanned_qty">Total Scanned Qty</string>
    <string name="total_items_scanned">Total Items Scanned</string>
    <string name="items_qty_scanned">Items Qty Scanned</string>
    <string name="items_qty_scanned_loc">Items Qty Scanned Loc</string>
    <string name="last_scanned_qty">Last Scanned . Qty</string>
    <string name="save">Save</string>
    <string name="plz_enter_a_barcode">Please enter a barcode!</string>
    <string name="search_barcode">Search Barcode</string>
    <string name="printers">Printers</string>
    <string name="material_receipt">Material Receipt</string>
    <string name="material_transfer">Material Transfer</string>
    <string name="price_varification">Price Varification</string>
    <string name="sync">Sync</string>
    <string name="physical_stock_count">Physical Stock Count</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="order">Order</string>
    <string name="search_order">Search Order</string>
    <string name="alert">Alert</string>
    <string name="from">From</string>
    <string name="to">To</string>
</resources>
