<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".material_receipt.MaterialReciptScanning">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="30dp"
                android:fontFamily="@font/athiti_medium"
                android:gravity="center_vertical"
                android:text="@string/desc1"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/desc1"
                android:layout_width="225dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="#F7FAFF"
                android:ems="10"
                android:fontFamily="@font/athiti_medium"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="30dp"
                android:fontFamily="@font/athiti_medium"
                android:gravity="center_vertical"
                android:text="@string/desc2"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/des2"
                android:layout_width="225dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="#F7FAFF"
                android:ems="10"
                android:fontFamily="@font/athiti_medium"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="30dp"
                android:fontFamily="@font/athiti_medium"
                android:gravity="center_vertical"
                android:text="@string/cost"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/code"
                android:layout_width="225dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="#F7FAFF"
                android:ems="10"
                android:fontFamily="@font/athiti_medium"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="30dp"
                android:fontFamily="@font/athiti_medium"
                android:gravity="center_vertical"
                android:text="@string/uom"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/uom"
                android:layout_width="225dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="#F7FAFF"
                android:ems="10"
                android:fontFamily="@font/athiti_medium"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="30dp"
                android:fontFamily="@font/athiti_medium"
                android:gravity="center_vertical"
                android:text="@string/unit"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/unit"
                android:layout_width="225dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="#F7FAFF"
                android:ems="10"
                android:fontFamily="@font/athiti_medium"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout6">

        <LinearLayout
            android:id="@+id/batchNo_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bat_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/athiti_medium"
                android:text="@string/bat"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <View
                android:layout_width="6dp"
                android:layout_height="3dp"
                android:background="@android:color/transparent" />

            <EditText
                android:id="@+id/no"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:background="@drawable/black_line"
                android:ems="10"
                android:inputType="number|textPersonName"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/athiti_medium"
                android:text="@string/QTY"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <View
                android:layout_width="6dp"
                android:layout_height="3dp"
                android:background="@android:color/transparent" />

            <EditText
                android:id="@+id/qty"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/black_line"
                android:ems="10"
                android:gravity="center"
                android:inputType="number|textPersonName"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11">
        <!--<TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/barcode"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:fontFamily="@font/athiti_medium"/>-->
        <EditText
            android:id="@+id/barcode"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/black_line"
            android:drawableStart="@drawable/barcode_small"
            android:drawableLeft="@drawable/barcode_small"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/barcode"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/et_referenceno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:scaleType="fitEnd"
            android:src="@drawable/ic_search_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/athiti_medium"
        android:gravity="center"
        android:text="@string/loc"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/refcode" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:fontFamily="@font/athiti_medium"
        android:gravity="center"
        android:text="Ordr"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/location3" />

    <Spinner
        android:id="@+id/location2"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bg_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/refcode" />

    <Spinner
        android:id="@+id/location3"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bg_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/location2" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/green">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="60dp"
                    android:layout_marginRight="60dp"
                    android:text="@string/material_receipt"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:fontFamily="@font/montserrat_bold" />
            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar2"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent" />
            </androidx.appcompat.widget.Toolbar>
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/refcode"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/black_line"
        android:fontFamily="@font/athiti_semibold"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>