<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <View
        android:id="@+id/view"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000"/>
    <LinearLayout
        android:id="@+id/actions_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_alignParentRight="true">
        <ImageView
            android:id="@+id/delete"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_delete_forever_black_24dp" />
        <ImageView
            android:id="@+id/edit"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:scaleType="fitXY"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_edit_green" />
    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/actions_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/barcode"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:fontFamily="@font/athiti_medium" />
        <EditText
            android:id="@+id/barcode"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/black_line"
            android:ems="10"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/athiti_medium"/>
        <RelativeLayout
            android:id="@+id/layout_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brand"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:fontFamily="@font/athiti_medium"/>
                <EditText
                    android:id="@+id/brand"
                    android:layout_width="180dp"
                    android:layout_height="40dp"
                    android:background="@drawable/black_line"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:paddingLeft="12dp"
                    android:textSize="16sp"
                    app:fontFamily="@font/athiti_medium"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="23dp">
                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:text="@string/QTY"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:fontFamily="@font/athiti_medium"/>
                <View
                    android:layout_width="4dp"
                    android:layout_height="2dp"
                    android:background="@android:color/transparent"/>
                <EditText
                    android:id="@+id/qty"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:background="#FFF8F0"
                    android:elevation="5dp"
                    android:inputType="number"
                    android:gravity="center_vertical"
                    android:paddingLeft="12dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:fontFamily="@font/athiti_medium"/>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/textView43"
                android:layout_width="125dp"
                android:layout_height="30dp"
                android:text="Desc1"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:gravity="center_vertical"
                app:fontFamily="@font/athiti_medium"/>
            <EditText
                android:id="@+id/desc1"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:background="#F7FAFF"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:fontFamily="@font/athiti_medium"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="125dp"
                android:layout_height="30dp"
                android:text="@string/desc2"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:gravity="center_vertical"
                app:fontFamily="@font/montserrat_semibold"/>
            <EditText
                android:id="@+id/des2"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:background="#F7FAFF"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:fontFamily="@font/athiti_medium"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>